# thi_proj

./: .gitignore  README.md  main.spec  pyproject.toml
resources/: download_items.yml
tests/: 1_page_playlist.html  test_resource.py
thi_proj/: bilibilib_get_audio.py  main.py  resource.py
thi_proj/utils/: downloads.py  logger.py
