[tool.poetry]
name = "thi-proj"
version = "0.1.0"
description = ""
authors = ["Fernando"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
logging = "^0.4.9.6"
lxml = "^5.3.0"
tqdm = "^4.66.5"
bs4 = "^0.0.2"
ffmpeg = "^1.4"
moviepy = "^1.0.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "http://pypi.tuna.tsinghua.edu.cn/simple"
